<resources>
    <string name="app_name">SsaSsaMarket</string>
    <string name="auto_log_in_tv">자동 로그인</string>
    <string name="log_in_cancle">로그인 취소</string>
    <string name="log_in_failure">로그인 실패</string>
    <string name="log_in_error_network">네트워크 오류</string>
    <string name="log_in_success">로그인에 성공하셨습니다.</string>
    <string name="log_in_error_firebase">문의글을 남겨주세요.</string>
    <string name="setting_nickname_register">등록</string>
    <string name="setting_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="setting_nickname_valid">setting_nickname_valid</string>
    <string name="setting_nickname_request_nickname">닉네임을 입력해주세요.</string>
    <string name="setting_nickname_error_nickname">닉네임 형식이 잘못 되었습니다.</string>
    <string name="setting_nickname_success">SsaSsa Market에 오신것을 환영합니다.</string>
    <string name="dialog_loading_text">잠시 기다려주세요</string>
    <string name="setting_nickname_duplicate">중복된 닉네임입니다.</string>
    <string name="navigation_home">홈</string>
    <string name="navigation_chat">채팅</string>
    <string name="navigation_writing">등록</string>
    <string name="navigation_inventory">마이페이지</string>
    <string name="navigation_setting">설정</string>
    <string name="category_hint">카테고리를 선택하세요</string>
    <string name="writing_register">등록</string>
    <string name="writing_title_hint">상품명</string>
    <string name="writing_price_hint">가격</string>
    <string name="writing_content_hint">게시할 내용을 작성해주세요.</string>
    <string name="permission_request">권한 설정 필요</string>
    <string name="permission_positive">예</string>
    <string name="permission_negative">아니오</string>
    <string name="gallery_image_max_size">/10</string>
    <string name="gallery_permission_cancel">갤러리 접근 권한을 거부하셨습니다.</string>
    <string name="gallery_permission_content">갤러리를 접근하기 위해 권한 설정이 필요합니다. 설정으로 이동하시겠습니까?</string>
    <string name="location_permission_cancel">위치 접근 권한을 거부하셨습니다.</string>
    <string name="location_permission_content">상품을 등록하기 위해 위치 권한 설정이 필요합니다. 설정으로 이동하시겠습니까?</string>
    <string name="notification_permission">알림 권한이 없으면 채팅 및 판매 알림을 받을 수 없습니다. 설정하시겠습니까?</string>
    <string name="product_title_request">상품 검색</string>
    <string name="korean_currency">원</string>
    <string name="years_ago">년 전</string>
    <string name="months_ago">달 전</string>
    <string name="days_ago">일 전</string>
    <string name="hours_ago">시간 전</string>
    <string name="minutes_ago">분 전</string>
    <string name="just_now">방금 전</string>
    <string name="detail_price">판매가 : </string>
    <string name="detail_location">지역 : </string>
    <string name="seller_edit">수정하기</string>
    <string name="seller_edit_cancel">취소하기</string>
    <string name="nickname_response_failure">닉네임을 불러오지 못했습니다.</string>
    <string name="edit_text">글 수정하기</string>
    <string name="success">완료</string>
    <string name="confirmation_dialog_message_read">상품 수정모드를 나가겠습니까?</string>
    <string name="confirmation_dialog_message_edit">상품 수정모드로 이동 하시겠습니까?</string>
    <string name="confirmation_dialog_message_delete">상품을 정말로 삭제 하시겠습니까?</string>
    <string name="confirmation_dialog_title">"재확인"</string>
    <string name="product_update_failed">상품 업데이트에 실패 하셨습니다.</string>
    <string name="product_update_success">상품이 업데이트 되었습니다.</string>
    <string name="product_delete_success">"상품이 삭제 되었습니다.</string>
    <string name="buyer_chat">채팅하기</string>
    <string name="request_message">메세지를 입력하세요.</string>
    <string name="empty_message_error">빈 메세지를 전송할 수는 없습니다.</string>
    <string name="chat_list_location_permission">채팅을 이용하기 위해 위치 권한 설정이 필요합니다. 설정으로 이동하시겠습니까?</string>
    <string name="buyer_buy">구매하기</string>
    <string name="buyer_chat_buy_permission">채팅 및 구매 기능을 이용하기 위해 위치 권한 설정이 필요합니다. 설정으로 이동하시겠습니까?</string>
    <string name="text_greeting_suffix">님</string>
    <string name="error_message_retry">잠시 후 다시 시도해주세요.</string>
    <string name="error_message_favorite">좋아요 기능에 문제가 발생하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_enter_chat">채팅방 입장에 문제가 발생하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_buy">구매 기능에 문제가 발생하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_user_data">사용자 정보를 가지고 오는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_send_message">메세지를 발송하는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_chat_room">채팅방 목록을 가져오는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_product_update">상품 정보를 수정하는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_nickname">닉네임 정보를 가지고 오는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_inventory">인벤토리 화면을 구성하는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="error_message_product_delete">상품 정보를 삭제하는데 문제가 발생 하였습니다. 잠시 후 다시 시도 해주세요.</string>
    <string name="request_writing_title">제목을 작성해주세요.</string>
    <string name="request_writing_request">카테고리를 선택 해주세요.</string>
    <string name="request_writing_price">가격을 작성 해주세요.</string>
    <string name="request_writing_content">글의 내용을 작성 해주세요.</string>
    <string name="request_writing_image">상품 사진을 등록 해주세요.</string>
    <string name="request_writing_all">글의 내용들을 작성 해주세요.</string>
    <string name="request_edit_product">변경된 내용이 없습니다.</string>
    <string name="request_edit_product_valid">수정 할 내용을 올바르게 입력 해주세요.</string>
    <string name="error_network">네트워크 연결 상태를 확인해주세요.</string>
    <string name="error_synchronization">동기화를 위해 방을 나갔다가 들어와주세요.</string>
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="customer_feedback">고객 의견</string>
    <string name="membership_withdrawal">회원 탈퇴</string>
    <string name="request_logout">로그아웃 하시겠습니까?</string>
    <string name="request_membership_withdrawal">회원 탈퇴 하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="request_buy">구매 하시겠습니까?</string>
    <string name="buy_confirmed">구매 확정</string>
    <string name="chat_room_created">채팅방이 개설되었습니다 !</string>
    <string name="error_location_issue">현재 위치 정보에 문제가 발생하여 메시지 전송이 불가능 합니다.</string>
    <string name="chat_channel_name">채팅 알림</string>
    <string name="chat_channel_description">채팅 알림입니다.</string>
    <string name="sell_channel_name">판매 알림</string>
    <string name="sell_channel_description">판매 알림입니다.</string>
    <string name="product_sold_out">해당 제품은 이미 팔린 제품입니다.</string>
</resources>
