<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_home_selector"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/navigation_chat_selector"
        android:title="@string/navigation_chat" />
    <item
        android:id="@+id/navigation_writing"
        android:icon="@drawable/navigation_writing_selected"
        android:title="@string/navigation_writing" />
    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/navigation_inventory_selector"
        android:title="@string/navigation_inventory" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/navigation_setting_selector"
        android:title="@string/navigation_setting"/>
</menu>
