<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mbj.ssassamarket.ui.settingnickname.SettingNicknameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settingnickname.SettingNicknameFragment">

        <ImageView
            android:id="@+id/setting_nickname_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal_20" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setting_nickname_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorEnabled="@{!viewModel.nicknameErrorMessage.isEmpty}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_50"
            app:layout_constraintVertical_chainStyle="packed"
            app:nicknameErrorText="@{viewModel.nicknameErrorMessage}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setting_nickname_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_nickname_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="8"
                android:text="@={viewModel.nickname}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/setting_nickname_register_bt"
            style="@style/ButtonStyle"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:enabled="@{viewModel.nicknameErrorMessage != @string/setting_nickname_valid}"
            android:onClick="@{() -> viewModel.addUser()}"
            android:text="@string/setting_nickname_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting_nickname_til"
            app:nicknameValidColor="@{viewModel.nicknameErrorMessage}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visible="@{viewModel.isError}" />

        <com.mbj.ssassamarket.util.ProgressIndicatorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visible="@{viewModel.isLoading}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
